--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
 body {
-    background-color: #111;
+    background-image: linear-gradient(to bottom right, gray 35%, black 50% );
+    background-repeat: no-repeat;
     color: aqua;
     text-align: center;
 }
+/*added to fit the page to full screen, instead of half the screen*/
+html, body {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
