linked the two pages and added more info and style

--- a/work.css
+++ b/work.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(to bottom right, gray 35%, black 50% );
+    background-image: linear-gradient(to bottom right, red 35%, black 50% );
     background-repeat: no-repeat;
     color: aqua;
     text-align: center;
